# Logger

./: .gitignore  .gitmodules  CMakeLists.txt
cmake/: DownloadDependencies.cmake
examples/: main.cpp
include/: Logger.hpp
include/LogClient/: LogClient.hpp
include/Logger/: Logger.hpp
src/: Logger.cpp
src/include/: LogClient.hpp  Logger.hpp
